[FIX] file galleries: fix display of files contextual menu on IE6 and IE7 by using a new CSS file 'css/ie6.css' that handles CSS destinated to IE6 only. This way, main CSS remains clean for modern browsers (FF3, FF2, IE7) that do not need IE6 hacks.
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/1.10@12035 b456876b-0849-0410-b77d-98878d47e9d5

--- a/tiki/styles/transitions/1.9to1.10.css
+++ b/tiki/styles/transitions/1.9to1.10.css
@@ -1,5 +1,5 @@
 /*
-$Header: /cvsroot/tikiwiki/tiki/styles/transitions/1.9to1.10.css,v 1.15.2.3 2008-03-03 13:10:24 sept_7 Exp $
+$Header: /cvsroot/tikiwiki/tiki/styles/transitions/1.9to1.10.css,v 1.15.2.4 2008-03-16 01:02:39 nyloth Exp $
 
 The following CSS classes were added to Tiki between v1.9 and v1.10
 They should be added to themes (possibly with tweaks) to make the theme v1.10 ready
@@ -221,3 +221,4 @@ td.third {
 	border-color: transparent !important;
 	border-width: 0px !important;
 }
+.iconmenutext { white-space: nowrap; }
